commands.txt
[14:06:05] Next scan in 13s... (Ctrl+C to stop)
[14:06:10] Stopping engine...
[14:06:11] Engine exited (code 1)
[14:27:23] Logged out: YesBet (Mark)
[14:27:24] Opening login for YesBet (Mark) → profile yesbet-1...
[14:28:09] Starting: npm run bonus:au -- amused --auto-lay --adaptive --auto-scale --scale-min 5 --scale-max 25 --max-liability 90 --max-exposure 0.025 --min-ret 0.56 --min-time 5 --max-time 12 --watch --dynamic --interval 15 --cooldown 8 --min-odds 3 --max-odds 15 --min-liq 15 --min-stake 10 --max-drift 0.18 --min-tob 80
> bookie-probe-runner@1.0.0 bonus:au
> ts-node bonus-execute.ts --mode au amused --auto-lay --adaptive --auto-scale --scale-min 5 --scale-max 25 --max-liability 90 --max-exposure 0.025 --min-ret 0.56 --min-time 5 --max-time 12 --watch --dynamic --interval 15 --cooldown 8 --min-odds 3 --max-odds 15 --min-liq 15 --min-stake 10 --max-drift 0.18 --min-tob 80
C:\Users\REDuser\Desktop\amused sign up lay bot\node_modules\ts-node\src\index.ts:859
return new TSError(diagnosticText, diagnosticCodes, diagnostics);
^
TSError: ⨯ Unable to compile TypeScript:
bonus-execute.ts(3113,29): error TS2339: Property 'bonusRemaining' does not exist on type 'BonusResult'.
bonus-execute.ts(3113,47): error TS2304: Cannot find name 'bonusBal'.
at createTSError (C:\Users\REDuser\Desktop\amused sign up lay bot\node_modules\ts-node\src\index.ts:859:12)
at reportTSError (C:\Users\REDuser\Desktop\amused sign up lay bot\node_modules\ts-node\src\index.ts:863:19)
at getOutput (C:\Users\REDuser\Desktop\amused sign up lay bot\node_modules\ts-node\src\index.ts:1077:36)
at Object.compile (C:\Users\REDuser\Desktop\amused sign up lay bot\node_modules\ts-node\src\index.ts:1433:41)
at Module.m._compile (C:\Users\REDuser\Desktop\amused sign up lay bot\node_modules\ts-node\src\index.ts:1617:30)
at node:internal/modules/cjs/loader:1969:10
at Object.require.extensions.<computed> [as .ts] (C:\Users\REDuser\Desktop\amused sign up lay bot\node_modules\ts-node\src\index.ts:1621:12)
at Module.load (node:internal/modules/cjs/loader:1552:32)
at Module._load (node:internal/modules/cjs/loader:1354:12)
at wrapModuleLoad (node:internal/modules/cjs/loader:255:19) {
diagnosticCodes: [ 2339, 2304 ]
}
[14:28:11] Engine exited (code 1)